2006-05-15  Neal H. Walfield  <neal@gnu.org>

	* globals.h (close_pix): Remove unused declaration.
	(day_pix): Likewise.
	(close_mask): Likewise.
	(day_mask): Likewise.
	(yearfont): Likewise.
	(datefont): Likewise.
	(MONTHTIMEFMT): Remove unused define.

2006-05-15  Neal H. Walfield  <neal@gnu.org>

	* event-list.c: Include <stdlib.h>.
	(ARROW_SIZE): Define.
	(struct _GtkEventList): Change widget to a GtkVBox.  Add new
	fields entry and combo.
	(gtk_event_list_get_type): Inherit from a GtkVBox.
	(time_to_string): New function.
	(date_cell_data_func): Use time_to_string where possible.
	(end_cell_data_func): New function.
	(arrow_click): New function.
	(reload): Likewise.
	(gtk_event_list_init): Create a horizontal spin box for the factor
	and a combo box to select the units for the amount of time to
	show.  Enable alternating row colors.  Add a third column which
	displays the end time.
	(gtk_event_list_reload_events): Get events covering not the next
	two weeks but using the values in the entry and combo.

	(button_press): Only zoom to the event on a button 1 click.

	* globals.h (is_reminder): Consider events which start at midnight
	and last exactly 24 hours reminders.

2006-05-15  Neal H. Walfield  <neal@gnu.org>

	* globals.h (FUTURE_ICON): New macro.
	* main.c (squash_pointer): New function.
	(display_tiny): New variable.
	(display_landscape): Likewise.
	(my_icons): Add "future_view".
	(main_bin): New variable.
	(upcoming_button): Likewise.
	(main): Move the code which creates the calendar view from here...
	(cal_view_build): ... to this new function.
	(struct upcoming_restore): New structure.
	(upcoming_view_off): New function.
	(cal_view_expire): Likewise.
	(upcoming_view_button_clicked): Likewise.
	(create_app_menu): Add an entry for the upcoming events view.
	(main): Replace local variable TINY with global static
	DISPLAY_TINY.  Replace local variable landscape with global static
	DISPLAY_LANDSCAPE.  Add a button for the upcoming view.  Put the