@@ -1,3 +1,8 @@
+2006-05-16  Neal H. Walfield  <neal@gnu.org>
+
+	* day_render.c (gtk_day_render_expose): Corrent the calculation of
+	the hour for machines with broken (?) FPUs.
+
 2006-05-15  Neal H. Walfield  <neal@gnu.org>
 
 	* globals.h (close_pix): Remove unused declaration.
